fixed downloads spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@
   }
 
   .download-cluster {
-    margin: 6vw;
+    margin: 150px 2.8vw 90px;
   }
 
   .about-section article {
